CAMEL-24862: Address review feedback: the compile work dir is resolved once at start, Path.of, and a set of the watched directories
Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Bp3538HRBPMQkb5ta9xRaj